// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render primary style 1`] = `
<button
  className="btn primary "
>
  Click
</button>
`;

exports[`Button should render warning style 1`] = `
<button
  className="btn  warning"
>
  Click
</button>
`;

exports[`Button should render with icon 1`] = `
<button
  className="btn  "
>
  <i
    className="icon icon-search"
  />
  Click
</button>
`;
